import required libraries

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -1,14 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Natural Language Processing with Spark"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview\n",
+    "The essence of this work is to implement pyspark in predicting the categories or tags to which a question belongs. For tech exhange sites e.g, stackoverflow it is important to know the most frequent question categories or tags so that the most common ones can be promptly and/or better addressed."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import findspark\n",
     "findspark.init('/home/ecomog/spark-2.4.3-bin-hadoop2.7')\n",
-    "import pyspark"
+    "import pyspark\n",
+    "\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import avg, col, concat,count, desc, explode, lit, min, max, split, stddev, udf\n",
+    "from pyspark.sql.types import IntegerType\n",
+    "\n",
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.classification import LogisticRegression\n",
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
+    "from pyspark.ml.feature import CountVectorizer, IDF, Normalizer, PCA, RegexTokenizer, StandardScaler, StopWordsRemover, StringIndexer, VectorAssembler\n",
+    "from pyspark.ml.regression import LinearRegression\n",
+    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
+    "\n",
+    "import re"
    ]
   }
  ],
