start spark session and load data

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -12,12 +12,12 @@
    "metadata": {},
    "source": [
     "## Overview\n",
-    "The essence of this work is to implement pyspark in predicting the categories or tags to which a question belongs. For tech exhange sites e.g, stackoverflow it is important to know the most frequent question categories or tags so that the most common ones can be promptly and/or better addressed."
+    "The essence of this work is to implement pyspark in predicting the categories or tags to which a question belongs. The data used is from stackoverflow one tag train data in json format. For tech exhange sites e.g, stackoverflow it is important to know the most frequent question categories or tags so that the most common ones can be promptly and/or better addressed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,39 @@
     "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
     "\n",
     "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark = SparkSession.builder \\\n",
+    "    .master(\"local\") \\\n",
+    "    .appName(\"nlp\") \\\n",
+    "    .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[Body: string, Id: bigint, Tags: string, Title: string, oneTag: string]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = spark.read.json('train_onetag.json')\n",
+    "df.persist()"
    ]
   }
  ],
